# mpi_ml

./: .gitignore  README.md  pyproject.toml
data/: process.py
data/processed/: ins.py
data/raw/: ins.py
logs/pinn_test/version_0/: events.out.tfevents.1742036396.ip-10-192-12-137.14541.0  events.out.tfevents.1742036448.ip-10-192-12-137.14541.1  hparams.yaml
src/data/: module.py
src/models/: base.py
src/models/cnn/: __init__.py  pinn.py  pinn_monolith.py  pinn_stream.py
src/models/fno/: __init__.py  core.py  fno.py  pinn.py
src/notebooks/: pinn_one_epoch.py  pinn_train.py  result_analysis.py  sgd.py
src/notebooks/eda/: mass.py  mass_conserve.py  particle_size.py  spatial.py  spatiotemporal.py  visualisation.py
src/notebooks/eda/spatial/: main.py
src/notebooks/eda/temporal/: main.py
src/notebooks/pinn_test/: overfit.py
src/notebooks/result/: metric_by_alt.py  result_analysis.py  result_plot.py
src/notebooks/training/: dummy_train.py  pinn_train.py
src/utils/: __init__.py  memory.py  plotting.py
src/utils/data/: loader.py
tests/data/: test_module.py
tests/models/fno/: test_core.py  test_pinn.py
