[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Alan Huynh",email = "hdmquan@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
packages = [{include = "src", from = "."}]

dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "h5py (>=3.13.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
