[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Alan Huynh",email = "hdmquan@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
packages = [{include = "src", from = "."}]

dependencies = [
    "numpy (>=1.23.0,<2.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "h5py (>=3.13.0,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "lightning (>=2.5.0.post0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
